--- a/index.html
+++ b/index.html
@@ -1,110 +1,142 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Vacation Rentals & Unique Homes</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pangolin&family=Lato&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&family=Lato&display=swap" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <div class="logo">Thinkfulbnb</div>
-      <nav>
-        <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
-        </ul>
-      </nav>
+        <div class="logo">Thinkfulbnb</div>
+        <nav>
+            <ul id="menu">
+                <li><a>Stay</a></li>
+                <li><a>About</a></li>
+                <li><a>Ideas</a></li>
+                <li><a>Host</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-      <!-- Stay -->
-      <section id="stay">
-        <h2>Find the perfect vacation rental</h2>
-        <!-- Create a form here -->
-      </section>
+        <!-- Stay -->
+        <section id="stay">
+            <h2>Find the perfect vacation rental</h2>
+            <!-- Create a form here -->
+            <form action="POST" id="search-form">
 
-      <!-- About -->
-      <section id="about" class="alternate-background">
-        <h2>About</h2>
+                <div class="search-item">
+                    <label for="search-location">Location</label>
+                    <input type="text" id="search-location" value="Search destination">
+                </div>
 
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
-        />
+                <div class="search-item">
+                    <label for="search-arrive">Arrive</label>
+                    <input type="date" id="search-arrive">
+                </div>
 
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
-        />
+                <div class="search-item">
+                    <label for="search-depart">Depart</label>
+                    <input type="date" id="search-depart">
+                </div>
 
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
-      </section>
+                <div class="search-item">
+                    <label for="search-location">Type</label>
+                    <select type="select" id="search-type" name="search-type">
+                      <option value="apartment">Apartment</option>
+                      <option value="barn">Barn</option>
+                      <option value="castle">Castle</option>
+                      <option value="houseboat">Houseboat</option>
+                      <option value="tiny-house">Tiny House</option>
+                      <option value="yacht">Yacht</option>
+                      <option value="yurt">Yurt</option>
+                    </select>
+                </div>
 
-      <!-- Ideas -->
-      <section id="ideas">
-        <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+                <input type="submit" id="search-submit" value="Search">
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+            </form>
+        </section>
 
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
-      </section>
+        <!-- About -->
+        <section id="about" class="alternate-background">
+            <h2>About</h2>
 
-      <!-- Host -->
-      <section id="host" class="alternate-background">
-        <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-          molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
-          Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
-          pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
-          libero rutrum vitae.
-        </p>
-        <ul>
-          <li>Mauris in pellentesque ligula.</li>
-          <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
-          <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-          <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
-          <li>
-            Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
-            hendrerit mauris.
-          </li>
-        </ul>
+            <div id="about-styling">
+                <img src="images/vacation-rental-pool.png" alt="Thinkfulbnb - Vacation rental pool" />
 
-        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
-      </section>
+                <img src="images/vacation-rental-inside-stone.png" alt="Thinkfulbnb - Vacation rental inside stone" />
+
+                <p>
+                    Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra neque, at tempus lorem. Aenean mi magna, posuere at quam
+                    sed, euismod gravida neque.
+                </p>
+            </div>
+
+        </section>
+
+        <!-- Ideas -->
+        <section id="ideas">
+            <h2>Ideas</h2>
+
+            <div id="ideas-styling">
+                <div class="idea-row">
+                    <div class="idea-item">
+                        <h3>Forest retreats</h3>
+                        <img src="images/forest-retreat.png" alt="Thinkfulbnb - Forest retreat" />
+                    </div>
+                    <div class="idea-item">
+                        <h3>Beaches</h3>
+                        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+                    </div>
+                </div>
+                <div class="idea-row">
+                    <div class="idea-item">
+                        <h3>Rustic cabins</h3>
+                        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+                    </div>
+                    <div class="idea-item">
+                        <h3>Pet-friendly</h3>
+                        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Host -->
+        <section id="host" class="alternate-background">
+            <div class="host-item">
+                <h2>Want to Become a Thinkfulbnb Host?</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus. Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus pellentesque eros in aliquet. Sed accumsan elit
+                    lacus, id ultrices libero rutrum vitae.
+                </p>
+                <ul>
+                    <li>Mauris in pellentesque ligula.</li>
+                    <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
+                    <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
+                    <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
+                    <li>
+                        Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget hendrerit mauris.
+                    </li>
+                </ul>
+            </div>
+            <div class="host-item">
+                <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+            </div>
+        </section>
     </main>
 
     <footer>
-      <p>© Thinkful</p>
+        <p>© Thinkful</p>
     </footer>
-  </body>
+</body>
+
 </html>
